--- a/group_vars/all.yml.example
+++ b/group_vars/all.yml.example
@@ -1,4 +1,5 @@
 ---
+kubernetes_version: '1.17.1'
 hcloud_floating_ip: 'Get from ./setup.sh'
 hcloud_token: 'Get from https://console.hetzner.cloud/'
 hcloud_network_name: kubernetes
